[package]
name = "cht_sh"
version = "0.1.0"
edition = "2021"

[dependencies]
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.5", features = ["client", "tokio", "http1", "http2"] }
tokio = { version = "1.37.0", features = ["full"] }
